# wasm-computer

./: .gitignore  Cargo.toml
guest_test/: Cargo.toml
guest_test/src/: main.rs
host_api/: Cargo.toml
host_api/src/: call_host.rs  lib.rs
host_api_sys/: Cargo.toml
host_api_sys/src/: lib.rs
sandboxer/: Cargo.toml
sandboxer/src/: devices.rs  host_api.rs  lib.rs
sandboxer/src/devices/: virtual_fs.rs
